remove extra configuration

--- a/ansible_project/ansible.cfg
+++ b/ansible_project/ansible.cfg
@@ -1,6 +1,4 @@
 [defaults]
 inventory = inventory
-host_key_checking = false
-
-[ssh_connection]
-pipelining = True
+private_key_file = ~./ssh/ansible
+remote_user = devop
