--- a/ansible_project/roles/base/tasks/main.yml
+++ b/ansible_project/roles/base/tasks/main.yml
@@ -1,4 +1,4 @@
- - name: add ssh key for luke
+ - name: add ssh key for devop
    authorized_key:
-     user: luke
+     user: devop
      key: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIAe7/ofWLNBq3+fRn3UmgAizdicLs9vcS4Oj8VSOD1S/ ansible"
