--- a/ansible/nfs/client_side.yml
+++ b/ansible/nfs/client_side.yml
@@ -3,9 +3,10 @@
   become: true
   
   handlers:
+  # - import_task: patch_linux.yml
+  #   when: os is match("rhel.*")
     - import_tasks: handlers/useradd.yml
     - import_tasks: handlers/update.yml
-  
   
   tasks:
       # Install and configure NFS server and AutoFS utility.
