doc: add future reference for import_task

--- a/ansible/nfs/nfs_server.yml
+++ b/ansible/nfs/nfs_server.yml
@@ -4,10 +4,11 @@
   become: true
   
   handlers:
+  # - import_task: patch_linux.yml
+  #   when: os is match("rhel.*")
     - import_tasks: handlers/useradd.yml
     - import_tasks: handlers/update.yml
 
-  
   tasks:
     # Install and configure NFS server core utility.
     - name: Install a list of packages with a list variable
