--- a/ansible/nfs/nfs_server.yml
+++ b/ansible/nfs/nfs_server.yml
@@ -4,7 +4,7 @@
   become: true
   
   handlers:
-  # - import_task: patch_linux.yml
+  # - include_task: patch_linux.yml
   #   when: os is match("rhel.*")
     - import_tasks: handlers/useradd.yml
     - import_tasks: handlers/update.yml
