--- a/ansible/nfs/client_side.yml
+++ b/ansible/nfs/client_side.yml
@@ -3,8 +3,7 @@
   become: true
   
   handlers:
-  # - include_task: patch_linux.yml
-  #   when: os is match("rhel.*")
+  # - include_task: /roles/patching/tasks/main.yml
     - import_tasks: handlers/useradd.yml
     - import_tasks: handlers/update.yml
   
