chore: add reference for include task with roles

--- a/ansible/nfs/nfs_server.yml
+++ b/ansible/nfs/nfs_server.yml
@@ -4,8 +4,7 @@
   become: true
   
   handlers:
-  # - include_task: patch_linux.yml
-  #   when: os is match("rhel.*")
+  # - include_task: /roles/patching/tasks/main.yml
     - import_tasks: handlers/useradd.yml
     - import_tasks: handlers/update.yml
 
